# core-music-hub

./: README.md  SUMMARY.md  pyproject.toml  run_local_checks.sh
data/songs/: README.md  catalog.yaml
src/core_music_hub/: __init__.py  __main__.py  cli.py  config.py  library.py  playback.py
src/core_music_hub/client/: __init__.py  client.py
src/core_music_hub/core/: __init__.py  models.py
src/core_music_hub/server/: __init__.py  app.py
src/core_music_hub/server/routes/: catalog.py  health.py  playback.py
tests/: conftest.py  test_client.py  test_library.py  test_playback.py  test_server_catalog.py  test_server_playback.py
