[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "core-music-hub"
version = "0.1.1"
description = "HTTP service for local audio playback with alias/mood/tag catalog"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fernando Velasco", email = "fermaat.vl@gmail.com"},
]
requires-python = "==3.12.*"
dependencies = [
    "core-utils @ git+https://github.com/fermaat/core-utils.git",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydub>=0.25",
    "sounddevice>=0.5",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "black>=26.5.1",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12.20260518",
    "httpx>=0.28.1",
]

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "functional: functional tests via TestClient",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["pydub.*", "sounddevice.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "C4", "B", "UP", "SIM"]
ignore = ["E501", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["core_music_hub"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
